EROPSPT-142 Add endpoint for searching VACs
